<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".travel.TravelDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-149dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/detailTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/detail_title"
                android:textColor="#000000"
                android:textSize="40sp" />

            <androidx.cardview.widget.CardView

                android:id="@+id/cardItemView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/detailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/item_title"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item" />

                <TextView
                    android:id="@+id/itemTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_title"
                    android:textColor="#fff"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="18dp"
                    android:layout_marginStart="18dp"/>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description_label"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/detailDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location_label"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/detailLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price_label"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/detailPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateStartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_start_label"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/detailStartDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_start"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateEndLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_end_label"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/detailEndDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_end"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                android:text="@string/buyButton" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>