<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/filterTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:gravity="center"
            android:text="@string/filter"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:padding="10dp">

             <TextView
                 android:id="@+id/minPriceTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="30sp"
                 android:gravity="center"
                 android:text="@string/min_price_title"/>

             <EditText
                 android:id="@+id/minPriceEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="26sp"
                 android:gravity="center"
                 android:text="@string/min_price_edit_text"
                 android:digits="1234567809"
                 tools:ignore="Autofill" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/maxPriceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/min_price_title"/>

            <EditText
                android:id="@+id/maxPriceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="26sp"
                android:gravity="center"
                android:text="@string/max_price_edit_text"
                android:digits="1234567809"
                android:importantForAutofill="no"
                tools:ignore="Autofill"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:padding="10dp">

        <Button
            android:id="@+id/cancelFilterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:text="@string/cancel_filter_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/applyFilterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/apply_filter_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>