<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".travel.TravelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-149dp"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/detailTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/detail_title"
                android:textColor="#000000"
                android:textSize="40sp" />

            <androidx.cardview.widget.CardView

                android:id="@+id/cardItemView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/detailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/item_title"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/itemMapButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="17dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/ic_map"
                    tools:ignore="SpeakableTextPresentCheck" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardItemMapView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                android:visibility="gone">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map_view"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/extendMapButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/ic_extend"
                    android:visibility="visible"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/itemImageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/ic_image"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description_label"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/detailDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/description"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price_label"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/detailPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/dateStartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_start_label"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/detailStartDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_start"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dateEndLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_end_label"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/detailEndDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_end"
                android:textSize="25sp" />



        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="start|bottom"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_buy"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            android:onClick="buyTravel"
            android:contentDescription="@string/buy_travel" />

    </RelativeLayout>

</LinearLayout>