<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".authentication.SignupActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/register_email_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_auto_complete"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:textSize="30sp"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_password_auto_complete"
            android:hint="@string/string_login_password_auto_complete"
            android:textSize="30sp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_password_confirmation_auto_complete"
            android:hint="@string/string_register_password_auto_complete"
            android:textSize="30sp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="5dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        tools:ignore="UselessLeaf" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/circle"
        android:textAllCaps="true"
        android:text="@string/login_button_register_text"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"/>


</LinearLayout>